k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"

  name: pihole-ingress
  namespace: pi-hole
spec:
  rules:
    - host: pihole.tino.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-frontend-service
                port:
                  number: 8080
  tls:
    - hosts:
        - pihole.tino.sh
      secretName: pihole-tino-sh-tls
